@@ -70,6 +70,7 @@ aarch64-tests: \
 	test0043-aarch64-binary \
 	test0044-aarch64-binary \
 	test0045-aarch64-binary \
+	test0046-aarch64-binary \
 	test0100-aarch64-binary \
 	test0101-aarch64-binary \
 	test0102-aarch64-binary \
@@ -126,6 +127,7 @@ amd64-tests: \
 	test0043-amd64-binary \
 	test0044-amd64-binary \
 	test0045-amd64-binary \
+	test0046-amd64-binary \
 	test0100-amd64-binary \
 	test0101-amd64-binary \
 	test0102-amd64-binary \
@@ -179,6 +181,7 @@ knight-posix-tests: \
 	test0043-knight-posix-binary \
 	test0044-knight-posix-binary \
 	test0045-knight-posix-binary \
+	test0046-knight-posix-binary \
 	test0100-knight-posix-binary \
 	test0101-knight-posix-binary \
 	test0102-knight-posix-binary \
@@ -256,6 +259,7 @@ armv7l-tests: \
 	test0043-armv7l-binary \
 	test0044-armv7l-binary \
 	test0045-armv7l-binary \
+	test0046-armv7l-binary \
 	test0100-armv7l-binary \
 	test0101-armv7l-binary \
 	test0102-armv7l-binary \
@@ -312,6 +316,7 @@ x86-tests: \
 	test0043-x86-binary \
 	test0044-x86-binary \
 	test0045-x86-binary \
+	test0046-x86-binary \
 	test0100-x86-binary \
 	test0101-x86-binary \
 	test0102-x86-binary \
@@ -368,6 +373,7 @@ riscv32-tests: \
 	test0043-riscv32-binary \
 	test0044-riscv32-binary \
 	test0045-riscv32-binary \
+	test0046-riscv32-binary \
 	test0100-riscv32-binary \
 	test0101-riscv32-binary \
 	test0102-riscv32-binary \
@@ -424,6 +430,7 @@ riscv64-tests: \
 	test0043-riscv64-binary \
 	test0044-riscv64-binary \
 	test0045-riscv64-binary \
+	test0046-riscv64-binary \
 	test0100-riscv64-binary \
 	test0101-riscv64-binary \
 	test0102-riscv64-binary \
@@ -570,6 +577,9 @@ test0044-riscv32-binary: M2-Planet | results
 
 test0045-riscv32-binary: M2-Planet | results
 	test/test0045/run_test.sh riscv32
+
+test0046-riscv32-binary: M2-Planet | results
+	test/test0046/run_test.sh riscv32
 
 test0100-riscv32-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv32
@@ -733,6 +743,9 @@ test0044-riscv64-binary: M2-Planet | results
 test0045-riscv64-binary: M2-Planet | results
 	test/test0045/run_test.sh riscv64
 
+test0046-riscv64-binary: M2-Planet | results
+	test/test0046/run_test.sh riscv64
+
 test0100-riscv64-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv64
 
@@ -894,6 +907,9 @@ test0044-aarch64-binary: M2-Planet | results
 
 test0045-aarch64-binary: M2-Planet | results
 	test/test0045/run_test.sh aarch64
+
+test0046-aarch64-binary: M2-Planet | results
+	test/test0046/run_test.sh aarch64
 
 test0100-aarch64-binary: M2-Planet | results
 	test/test0100/run_test.sh aarch64
@@ -1057,6 +1073,9 @@ test0044-amd64-binary: M2-Planet | results
 test0045-amd64-binary: M2-Planet | results
 	test/test0045/run_test.sh amd64
 
+test0046-amd64-binary: M2-Planet | results
+	test/test0046/run_test.sh amd64
+
 test0100-amd64-binary: M2-Planet | results
 	test/test0100/run_test.sh amd64
 
@@ -1209,6 +1228,9 @@ test0044-knight-posix-binary: M2-Planet | results
 
 test0045-knight-posix-binary: M2-Planet | results
 	test/test0045/hello-knight-posix.sh
+
+test0046-knight-posix-binary: M2-Planet | results
+	test/test0046/hello-knight-posix.sh
 
 test0100-knight-posix-binary: M2-Planet | results
 	test/test0100/hello-knight-posix.sh
@@ -1429,6 +1451,9 @@ test0044-armv7l-binary: M2-Planet | results
 test0045-armv7l-binary: M2-Planet | results
 	test/test0045/run_test.sh armv7l
 
+test0046-armv7l-binary: M2-Planet | results
+	test/test0046/run_test.sh armv7l
+
 test0100-armv7l-binary: M2-Planet | results
 	test/test0100/run_test.sh armv7l
 
@@ -1590,6 +1615,9 @@ test0044-x86-binary: M2-Planet | results
 
 test0045-x86-binary: M2-Planet | results
 	test/test0045/run_test.sh x86
+
+test0046-x86-binary: M2-Planet | results
+	test/test0046/run_test.sh x86
 
 test0100-x86-binary: M2-Planet | results
 	test/test0100/run_test.sh x86
