@@ -21,6 +21,7 @@ Added support for initializing global arrays of structs using initializer lists
 Added support for prefix operators ++ and --
 Added support for postfix operators ++ and --
 Added ability to parse typedefs for simple function pointers
+Added support for anonymous structs (C11 extension). This was already implemented as the only way to use unions.
 
 * 1.12.1 - 2025-03-16
 ** Fixed
